sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Onboarding_Platform__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Platform__c</fullName>
    <description>LEM-1979: Captures the platform in which the Mx will be onboarded.</description>
    <label>Onboarding Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caviar</fullName>
            </value>
            <value>
                <fullName>Caviar and DoorDash</fullName>
            </value>
            <value>
                <fullName>DoorDash</fullName>
            </value>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>White Labeled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>