sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Packages_with_Products__c.field-meta.xml
<CustomField>
    <fullName>Packages_with_Products__c</fullName>
    <label>Packages with Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>