sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Payment_Account_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account_Record_Type_Id__c</fullName>
    <description>LEM-2133: Used for Nintex to get the payment account record type id</description>
    <label>Payment Account Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>