sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Prefill_the_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Prefill_the_Business_Name__c</fullName>
    <description>LEM-2486: It is used to capture the AO Decision to pre-fill the Business Name in the Nintex form.</description>
    <label>Prefill External Business Name?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>