sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Proposed_Date_of_Tablet__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date_of_Tablet__c</fullName>
    <description>LEM-1979: Captures the Date of Tablet.</description>
    <label>Proposed Date of Tablet</label>
    <type>Date</type>
</CustomField>