sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Rate_Change_or_Product_Addition__c.field-meta.xml
<CustomField>
    <fullName>Rate_Change_or_Product_Addition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1979: Captures if the user needs a Rate Change/Addition of Product or not.</description>
    <label>Is Rate Change or Product Addition?</label>
    <type>Checkbox</type>
</CustomField>