sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Seattle_Zipcodes__c.field-meta.xml
<CustomField>
    <fullName>Seattle_Zipcodes__c</fullName>
    <formula>$Label.Seattle_Zipcodes</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seattle Zipcodes</label>
    <type>Text</type>
</CustomField>