sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16523: It stores Account segment value from the related Contract.</description>
    <formula>TEXT(Contract__r.Account.Segment__c)</formula>
    <label>Segment</label>
    <type>Text</type>
</CustomField>