sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Select_the_Franchise_Type__c.field-meta.xml
<CustomField>
    <fullName>Select_the_Franchise_Type__c</fullName>
    <description>LEM-2297: Captures franchise type</description>
    <label>Select the Franchise Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrated Franchise</fullName>
            </value>
            <value>
                <fullName>Drive Form - Franchise</fullName>
            </value>
            <value>
                <fullName>Drive - Amendment</fullName>
            </value>
            <value>
                <fullName>Withholding Opt-out</fullName>
            </value>
            <value>
                <fullName>Drive Amendment</fullName>
                <isActive>false</isActive>
                <label>Drive Amendment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>