sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Send_submission_confirmation_to_emails__c.field-meta.xml
<CustomField>
    <fullName>Send_submission_confirmation_to_emails__c</fullName>
    <description>LEM-2297: Captures emails that should receive submission confirmations for form</description>
    <inlineHelpText>To send email confirmation after Mx submits the form, enter the recipient email ids separated by semi colon(;).</inlineHelpText>
    <label>Send submission confirmation to emails</label>
    <type>TextArea</type>
</CustomField>