sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Shopping_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Protocol__c</fullName>
    <description>LEM-10038: It indicates the shopping protocol for the specified account.</description>
    <label>Shopping Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mx Pick</fullName>
            </value>
            <value>
                <fullName>Dasher Pick</fullName>
            </value>
            <value>
                <fullName>Shopper Pick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>