sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Should_DashPass_be_included__c.field-meta.xml
<CustomField>
    <fullName>Should_DashPass_be_included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2734: Deciding whether to include DashPass or not</description>
    <label>Should DashPass be included?</label>
    <type>Checkbox</type>
</CustomField>