sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Should_Pickup_be_included__c.field-meta.xml
<CustomField>
    <fullName>Should_Pickup_be_included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2734: Deciding whether to include pickup or not.</description>
    <label>Should Pickup be included?</label>
    <type>Checkbox</type>
</CustomField>