sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Support_terms_in_SF_automated_onboarding__c.field-meta.xml
<CustomField>
    <fullName>Support_terms_in_SF_automated_onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2297: Captures the decision if all terms supported in SFDC automated onboarding or not</description>
    <label>Support terms in SF automated onboarding</label>
    <type>Checkbox</type>
</CustomField>