sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Tablet_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Tablet_Delivery_Method__c</fullName>
    <description>LEM-1979: Captures the method in which Merchant prefers Tablet Delivery.</description>
    <label>Tablet Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drop-ship</fullName>
            </value>
            <value>
                <fullName>Local Team Drop-off</fullName>
            </value>
            <value>
                <fullName>None - Use Existing Tablet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>