sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/Tablet_Kit_Type__c.field-meta.xml
<CustomField>
    <fullName>Tablet_Kit_Type__c</fullName>
    <description>LEM-1979: Captures the type of Tablet Kit.</description>
    <label>Tablet Kit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dunkin Donuts</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>