sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>LEM-2489: This field is used to keep the URL generated in the Pop-Up on “Merchant Pop-up response“ object</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>