sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mx_Corporate_Account__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Contract__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Franchise Form Requests</label>
</ListView>