sfdx-source/force-app/main/default/objects/Merchant_Pop_Up_Response__c/listViews/CommOps_Nintex_URL_Request.listView-meta.xml
<ListView>
    <fullName>CommOps_Nintex_URL_Request</fullName>
    <columns>NAME</columns>
    <columns>Segment__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Contract__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Vijay Upadhaya</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Approval - Nintex URL Request</label>
</ListView>